Further fixes for iFrame mail display * Fix FF resize issue (height: 0) * Fix Safari overflow issue (display: table) * Fix IE style issue (font shorthand)

--- a/ui/apps/io.ox/mail/detail/content.less
+++ b/ui/apps/io.ox/mail/detail/content.less
@@ -14,12 +14,16 @@
 .iframe-body {
     margin: 0;
     padding: 0;
+    overflow: hidden;
 }
 
 .mail-detail-content {
 
-    font: normal e('13px/normal') @normal-font-family;
+    box-sizing: border-box;
 
+    font-family:@normal-font-family;
+    font-size: 13px;
+    font-weight: normal;
     font-feature-settings: "liga" 0;
 
     // Max-width does not work here, see Bug #24505
@@ -29,7 +33,7 @@
     position: relative;
 
     // use display: table to cover padding/margin/float issues at the bottom
-    display: table;
+    //display: table;
 
     // TODO: remove / temp. fix for sanitized HTML
     padding: 0;
